# projects

./: README.md
1docs/: README.md  production-ready-apps.md
1docs/1cool-repos-n-techstacks/: README.md  convex-reactive-Database.md  janesteet-goldmansachs-algos.md  production-ready-apps.md  repos-n-techstacks.md
1docs/LIFE/: README.md
ainative/: astro.config.mjs  package.json  pnpm-lock.yaml
bst/my-better-t-app/: README.md  bts.jsonc  (+3 more)
earnings-backtesting/: test.py  vectorbt-test.py
firecrawl/: README.md  finviz.js  package-lock.json  package.json  test.mjs
kb/: Codebase-undetstanding.md  Notes.md  db-install.md
knowledgebase-valut/: how-we-hire-at-LINEAR.md  output-is-not-DESIGN.md  training-small-models.md
opencodeweb/: astro.config.mjs  package-lock.json  package.json
project-mgmt/: .gitignore  DInstall-steps.md  TEST-SPEC.md  middleware.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
second-brain/: .gitignore  DESIGN-DOC.md  DInstall-steps.md  README.md  drizzle.config.ts  package.json  pnpm-lock.yaml
secondbrain/: .env.example  .env.test.example  drizzle.config.ts  middleware.ts  package.json  pnpm-lock.yaml
showmeedge/: .env.example  .env.local  .env.test  .gitignore  ARCH-BRAINSTORMING.md  DESIGN2-revised.md  README.md  drizzle.config.ts  middleware.ts  package.json  pnpm-lock.yaml  tipranks-auth.json
showmeedge/batch-jobs/analyst-price-targets/from-massive/: README.md  benzinga.py  pyproject.toml  run.sh
showmeedge/batch-jobs/analyst-price-targets/from-massive/tests/: test_benzinga.py
(+404 files in other folders)
