[project]
name = "showmeedge-massive-analyst-ratings"
version = "0.1.0"
description = "Restartable Massive Benzinga analyst-ratings collector"
requires-python = ">=3.12,<3.13"
dependencies = [
  "massive==2.8.0",
]

[tool.uv]
package = false
python-preference = "only-managed"
required-version = "==0.11.30"
